hack/example-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: monetization-proxy-example
  name: monetization-proxy-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monetization-proxy-example
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: monetization-proxy-example
    spec:
      containers:
      # Sidecar proxy configuration
      - image: downey/web-monetization-proxy
        name: web-monetization-proxy
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      - image: ghost # https://hub.docker.com/_/ghost
        name: ghost-blog
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: monetization-proxy-example
  name: monetization-proxy-example
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: monetization-proxy-example
  type: ClusterIP
